# pogoda

./: .gitignore  AI.md  Cargo.toml  README.crates.md  README.md
.github/workflows/: ci.yml  release.yml
locales/: ca.yml  cs.yml  da.yml  de.yml  el.yml  en.yml  es-419.yml  es-es.yml  fi.yml  fr-ca.yml  fr-fr.yml  hr.yml  hu.yml  it.yml  nb.yml  nl.yml  pl.yml  pt-br.yml  pt-pt.yml  ro.yml  ru.yml  sk.yml  sv.yml  tr.yml  uk.yml
src/: colors.rs  geo.rs  locale.rs  main.rs  types.rs  units.rs  weather.rs
src/render/: banner.rs  bars.rs  charts.rs  drone.rs  historical.rs  mod.rs  table.rs
tests/fixtures/: drone.json  forecast.json  historical_daily.json  historical_hourly.json
