[package]
name = "pogoda"
version = "0.11.0"
edition = "2024"
description = "Terminal weather forecast — hourly charts, drone mode, historical data"
repository = "https://github.com/akurczyk/pogoda"
homepage = "https://github.com/akurczyk/pogoda"
license = "BSD-2-Clause"
keywords = ["weather", "forecast", "terminal", "cli", "open-meteo"]
categories = ["command-line-utilities"]
readme = "README.crates.md"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde", "unstable-locales"] }
sys-locale = "0.3"
rust-i18n = "3"
anyhow = "1"
